--- a/Simon-Says/main.css
+++ b/Simon-Says/main.css
@@ -82,3 +82,27 @@ body
   top: 12%;
   left: 25%;
 }
+#startbtn
+{
+  height:25px;
+  background-color: red;
+  opacity: 0.9;
+  border-radius: 25px;
+  position: relative;
+  top: -8px;
+  left: 131px;
+}
+#roundLevel
+{
+  width: 50px;
+  height: 40px;
+  margin-left: 35px;
+  margin-top: 28px;
+  border-radius: 15px;
+  background-color: #3d3d29;
+  outline: 0;
+  color: #cc0000;
+  font-size: 40px;
+  text-align: center;
+  float: left;
+}
